# Pi3Ctrl

./: MANIFEST.in  README.rst  install.sh  pyproject.toml  setup.cfg  setup.py  setup.sh  update.sh
etc/: dhcpcd.conf  dnsmasq.conf  sysctl.conf
etc/hostapd/: hostapd.conf
etc/nginx/sites-available/: pi3ctrl.proxy
etc/systemd/system/: pi3ctrl-wifi.service
etc/wpa_supplicant/: wpa_supplicant.conf
src/etc/: dnsmasq.conf
src/etc/hostapd/: hostapd.conf
src/etc/nginx/sites-available/: pi3ctrl.proxy
src/etc/nginx/sites-enabled/: pi3ctrl.proxy
src/etc/rsyslog.d/: pypictrl.conf
src/etc/systemd/system/: pi3ctrl-core.service  pi3ctrl-http.service  pi3ctrl-wifi.service
src/pi3ctrl/: __init__.py  config.py  core.py  database.py  db.py  run.py  schema.sql  utils.py  uwsgi.ini  version.py
src/pi3ctrl/app/: __init__.py  utils.py  uwsgi.ini  wsgi.py
src/pi3ctrl/app/static/3rd/: README.md
src/pi3ctrl/app/static/css/: pi3ctrl.css
src/pi3ctrl/app/static/js/: get-response.js  pi3ctrl.js  show-password-toggle.min.js
src/pi3ctrl/app/templates/: base.html.jinja  secret-modal.html.jinja
src/pi3ctrl/app/templates/tabs/: ctrl.html.jinja  data.html.jinja  home.html.jinja  stats.html.jinja  status.html.jinja  wifi.html.jinja  wlan.html.jinja
src/pi3ctrl/util/: __init__.py  is_raspberry_pi.py  logger.py  parse_config.py  system_call.py
src/pi3ctrl/wifi/: README.rst  __init__.py  append_wpa_supplicant  autohotspot  hostapd.conf  hostapd.py  nmcli_add_ssid_psk  nmcli_add_ssid_wpa  pi3ctrl-add-ssid
src/pi3ctrl/wlan/: __init__.py  append_wpa_supplicant
src/pi3ctrl/wsgi/: __init__.py  uwsgi.ini  uwsgi.py
