[metadata]
name = Pi3Ctrl
description = Python 3 based event player for Raspberry Pi with GPIO control
long_description = file: README.rst
long_description_content_type = text/x-rst; charset = UTF-8
url = https://github.com/psmsmets/Pi3Ctrl
author = Pieter Smets
author_email = mail@pietersmets.be
maintainer  = Pieter Smets
maintainer_email = mail@pietersmets.be
license = 'MIT license'
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: MIT license 
    Operating System :: Unix
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Education
keywords = unix, automation, event, gpio, wav
project_urls =
    Source = https://github.com/psmsmets/Pi3Ctrl
    Tracker = https://github.com/psmsmets/Pi3Ctrl/issues

[options]
package_dir =
    = src
packages = find_namespace:
zip_safe = False
platforms = any
include_package_data = True
python_requires = >=3.8
install_requires =
    Flask>=2.0
    Flask-cors>=3.0
    gpiozero>=1.6
#    lgpio>=0.2
#    pigpio>=1.78
    requests>=2.20
    systemd>=0.16
    uwsgi>=2.0
setup_requires =
    setuptools_scm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pi3ctrl-core = pi3ctrl.run:main

# [options.data_files]
# share/pi3ctrl =
#    demo.json
#    demo.service

[bdist_wheel]
universal = true
