[metadata]
name = pi3ctrl
description = Python 3 event player for Raspberry Pi with GPIO control
long_description = file: README.rst
long_description_content_type = text/x-rst; charset = UTF-8
url = https://github.com/psmsmets/Pi3Ctrl
author = Pieter Smets
author_email = mail@pietersmets.be
maintainer  = Pieter Smets
maintainer_email = mail@pietersmets.be
license = 'MIT license'
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: MIT license 
    Operating System :: Unix
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Education
keywords = unix, automation, event, gpio, wav
project_urls =
    Source = https://github.com/psmsmets/Pi3Ctrl
    Tracker = https://github.com/psmsmets/Pi3Ctrl/issues

[options]
package_dir =
    = src
packages = find_namespace:
zip_safe = False
platforms = any
include_package_data = True
python_requires = >=3.8
install_requires =
    Flask>=3.0
    Flask-cors>=4.0
    Flask-SQLAlchemy>=3.0
    gpiozero>=1.6
    lgpio>=0.2; sys_platform == "linux"
    pandas>=2.0
    pigpio>=1.78; sys_platform == "linux"
    requests>=2.20
    uwsgi>=2.0; sys_platform == "linux"
setup_requires =
    setuptools_scm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pi3ctrl-core = pi3ctrl.core:main
    pi3ctrl-http = pi3ctrl.wsgi.uwsgi:main

[options.data_files]
share/pi3ctrl =
    src/pi3ctrl/wsgi/uwsgi.ini
bin =
    src/pi3ctrl/wifi/pi3ctrl_add_ssid_psk
    src/pi3ctrl/wifi/pi3ctrl_autohotspot

[bdist_wheel]
universal = true

[flake8]
max-line-length = 127
# hang-closing allows valid indented closing brackets, see https://github.com/PyCQA/pycodestyle/issues/103#issuecomment-17366719
hang-closing = True

# NOTE: Keep consistent between..
#   - .flake8 --ignore
# E121: continuation line under-indented for hanging indent
# E123: closing bracket does not match indentation of opening bracket’s line
# E126: continuation line over-indented for hanging indent
# E133: closing bracket is missing indentation
#   this is an Error shown for one alternative form of closing bracket,
#   closing it without indentation with regard to opening line. This gets
#   raised when --hang-closing is selected to allow the form with 4 spaces
#   as indent (which is valid according to PEP8 but raised by pycodestyle)
# E24: multiple spaces after ‘,’
# E226: missing whitespace around arithmetic operator
# E402: module level import not at top of file
# E704: multiple statements on one line (def)
# W503: line break before binary operator
# W504: line break after binary operator
ignore = E121, E123, E126, E133, E24, E226, E402, E704, W503, W504, W605,
exclude = *.egg-info, .DS_Store, .eggs, *.swp
